tests/ui/consts/issue-17718-const-borrow.stderr
error[E0492]: constants cannot refer to interior mutable data
  --> $DIR/issue-17718-const-borrow.rs:4:39
   |
LL | const B: &'static UnsafeCell<usize> = &A;
   |                                       ^^ this borrow of an interior mutable value may end up in the final value

error[E0492]: constants cannot refer to interior mutable data
  --> $DIR/issue-17718-const-borrow.rs:9:39
   |
LL | const E: &'static UnsafeCell<usize> = &D.a;
   |                                       ^^^^ this borrow of an interior mutable value may end up in the final value

error[E0492]: constants cannot refer to interior mutable data
  --> $DIR/issue-17718-const-borrow.rs:11:23
   |
LL | const F: &'static C = &D;
   |                       ^^ this borrow of an interior mutable value may end up in the final value

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0492`.
